resultado do processamento dos pagamentos salvo em arquivo csv único.